<resources>
    <string name="app_name">hike</string>
    <string name="app_label">&#160;hike</string>
    <string name="invite">Tell a friend</string>
    <string name="deleteconversations">Delete all conversations</string>
    <string name="send">Send</string>
    <string name="type_to_compose">Type to Compose</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_all_question">Are you sure you want to delete all your conversations?</string>
    <string name="forward">Forward</string>
    <string name="copy">Copy</string>
    <string name="preferences">Preferences</string>
    <string name="resend">Resend</string>
    <string name="delete_account_failed">hike couldn\'t delete your account. Please try again.</string>
    <string name="hike_network_connection">Network Connection</string>
    <string name="notconnected_data_disabled">Boss, you\'ve got to turn on data to experience hike!</string>
    <string name="notconnected_no_internet">Boss, check the internet!</string>
    <string name="already_hike_user">Good News! Your friend is already on hike!</string>
    <string name="block_users">Block Users</string>
    <string name="profile_title">Profile</string>
    <string name="updating_profile">Updating Profile</string>
    <string name="update_profile_failed">Could not update profile</string>
    <string name="image_failed">Unable to open image</string>
    <string name="block_title">Block</string>
    <string name="unblock_title">Unblock</string>
    <string name="feedback">Feedback</string>
    <string name="sending_feedback">Sending Feedback</string>
    <string name="sending_feedback_failed">Unable to send feedback</string>
    <string name="feedback_hint">We\'d love to hear from you...</string>
    <string name="block_overlay_message">You\'ve blocked %1$s.  Unblock and continue hiking.</string>
    <string name="how_hike_feel">How does hike make you feel?</string>
    <string name="feedback_success">Thanks for your feedback!</string>
    <string name="phone_num">Phone Number</string>
    <string name="pin">PIN</string>
    <string name="name">Name</string>
    <string name="terms_privacy">Terms and Privacy</string>
    <string name="invite_now">Invite now</string>
    <string name="disclaimer_india">Free SMS can only be sent to India at the moment.</string>
    <string name="earn_200_sms">Invite friends, earn more free SMS.</string>
    <string name="dnd_message">We can\'t send %1$s a message as this person is on the DND list. For %1$s to receive hike messages, %1$s needs to opt-in to hike by giving a missed call to %2$s.\n\nYou\'ll get an extra 10 free SMS\' per month if %1$s opts-in!\n\nTo send this information to %1$s as a normal SMS, tap here.</string>
    <string name="dnd_invite_message">Hey, I\'m using hike to send SMS for free! For you to start receiving messages from hike, I need you to opt-in. Just give a missed call to %1$s.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="no_sd_card">Please insert an SD Card</string>
    <string name="press_btn_invite">To invite %1$s to hike, tap here.</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="joined_conversation">%1$s joined the group chat!</string>
    <string name="left_conversation">%1$s left the group chat.</string>
    <string name="leave_group">Leave Group</string>
    <string name="group_chat_end">This group chat has ended.</string>
    <string name="group_info">Group Info</string>
    <string name="tap_group_info">Tap this button for group info.</string>
    <string name="invite_all_to_hike">Invite members on SMS to hike</string>
    <string name="friend_joined_hike_no_creds">%1$s just joined hike because of you. Great job!</string>
    <string name="friend_joined_hike_with_creds">%1$s just joined hike because of you. Great job! As promised, here are your additional 50 free SMS for bringing a friend. To see your total free SMS, tap here.</string>
    <string name="default_invite_url">http://get.hike.in/%1$s</string>
    <string name="tap_share">Tap to share your unique invite URL:</string>
    <string name="done">Done</string>
    <string name="group_chat">Group Chat</string>
    <string name="new_message">New Message</string>
    <string name="add_group">Add to Group</string>
    <string name="invite_share_message">I\'m using hike, an awesome new free messaging app! Download the app at http://get.hike.in/%1$s to start messaging me for free!</string>
    <string name="max_sms">Max 5 SMS contacts in a group.</string>
    <string name="max_contact">Max 50 contacts in a group.</string>
    <string name="sms_renew">Refills on the 1st of every month</string>
    <string name="invite_friend_free_sms">Earn an extra 50 free SMS per month for every friend that joins hike because of you.</string>
    <string name="free_sms_50">50 free SMS</string>
    <string name="group_chat_free">Group chat is free till 31st Dec.\nCredits don\'t apply.</string>
    <string name="sms_disclaimer">*SMSs that are received and shown in hike are\nstored locally and never uploaded to our servers.\n\nWe promise.</string>
    <string name="sms_alert_text">You can now receive all your SMSs in hike. Tap below to turn this feature on.</string>
    <string name="sms">SMS</string>
    <string name="turn_on">Turn On</string>
    <string name="block_owner">Block group owner</string>
    <string name="unblock_owner">Unblock group owner</string>
    <string name="no_thanks">Not now</string>
    <string name="tap_to_message">Tap here to message this person</string>
    <string name="tap_to_add">Tap here to add this person</string>
    <string name="call">Call</string>
    <string name="we_have_gc">Tap the menu to start a Group Chat.</string>
    <string name="upload_failed">Could not upload file. Check network settings.</string>
    <string name="joined_hike">%1$s just joined hike!</string>
    <string name="opt_in">%1$s just opted in!</string>
    <string name="dnd_msg_gc">Waiting for %1$s to reply to join in</string>
    <string name="earned_credits">You\'ve just earned %1$s free SMS</string>
    <string name="earned_credits_highlight">%1$s free SMS</string>
    <string name="no_external_storage">External storage not found</string>
    <string name="share_file">Share</string>
    <string name="download_failed">Could not download file. Check network settings.</string>
    <string name="download_failed_fatal">Could not download file. Please redownload file.</string>
    <string name="card_unmount">File Inaccessible. Please mount SD Card and try again.</string>
    <string name="not_enough_space">Your phone does not have enough space to download the file</string>
    <string name="dnd_one_to_one">%1$s is on DND. Waiting for %1$s to reply.</string>
    <string name="optin_one_to_one">%1$s just opted in to hike!</string>
    <string name="download_cancelled">Download cancelled</string>
    <string name="upload_cancelled">Upload cancelled</string>
    <string name="cancel_download">Cancel download</string>
    <string name="cancel_upload">Cancel upload</string>
    <string name="invited_to_gc">%1$s has been invited</string>
    <string name="share">Share</string>
    <string name="start_rec">Recorder</string>
    <string name="recording">Recording</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="preview">Preview</string>
    <string name="error_recording">Audio could not be recorded.</string>
    <string name="done_rec">Done recording</string>
    <string name="tap_to_record">TAP TO RECORD</string>
    <string name="tap_to_play">TAP TO PLAY</string>
    <string name="playing">PLAYING</string>
    <string name="home">Home</string>
    <string name="free_messaging_txt">Free Messaging</string>
    <string name="rewards">Rewards</string>
    <string name="help">Help</string>
    <string name="rewards_info">Invite friends, earn rewards.\nFor every friend who joins you get:</string>
    <string name="credit_to_balance">Rs.10 credited\nto your balance</string>
    <string name="free_sms_month">50 free SMS\nevery month</string>
    <string name="reward">Reward</string>
    <string name="claimed_so_far">Claimed so far:</string>
    <string name="rewards_disclaimer">You can claim a reward once it’s more than Rs.50.\nMore about Rewards in our FAQs.</string>
    <string name="hike_to_hike_free_always">Free, always, worldwide</string>
    <string name="hike_to_sms">Also message friends not on hike\nfor free with Free hike SMS</string>
    <string name="hike_to_sms_disclaimer">Free SMS only works to India</string>
    <string name="rewards_intro">Invite and earn Free SMS</string>
    <string name="help_info">Questions? Write to us or read\nthrough frequently asked questions.</string>
    <string name="meet_hike">Meet hike</string>
    <string name="recent_icon_text">Emoticons you use often will be shown here</string>
    <string name="recently_used">Recently Used</string>
    <string name="free_sms_left">hike to SMS</string>
    <string name="normal_update">Update to the new version of hike to discover amazing new ways to message</string>
    <string name="free_sms">Free SMS to India</string>
    <string name="free_sms_msg">Turn on to send free SMS to India</string>
    <string name="auto_download_media">Auto download media</string>
    <string name="md_auto_download_media">Auto Download Media : Mobile</string>
    <string name="wf_auto_download_media">Auto Download Media : Wi-Fi</string>
    <string name="auto_download_image_title">Images</string>
    <string name="auto_download_video_title">Video</string>
    <string name="auto_download_audio_title">Audio</string>
    <string name="delete_account">Delete Account</string>
    <string name="unlink_account_msg">Unlink your account from this phone</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="settings">Settings</string>
    <string name="all_set_signup">You\'re all set on %1$s</string>
    <string name="enter_name_signup">What\'s your name?</string>
    <string name="lets_hike_signup">Let\'s hike</string>
    <string name="scanning_contacts_signup">Scanning contacts...</string>
    <string name="faq">FAQs</string>
    <string name="other">Other</string>
    <string name="my_profile">My Profile</string>
    <string name="free_sms_txt">Free SMS</string>
    <string name="mute_group">Mute Group</string>
    <string name="ssl">128-bit SSL</string>
    <string name="ssl_info">Wi-Fi only</string>
    <string name="system_health">System Health</string>
    <string name="call_not_free_body">Your telecom operator may charge you for this call.</string>
    <string name="continue_txt">Continue</string>
    <string name="manage_account">Account</string>
    <string name="default_client_header">Unified Inbox</string>
    <string name="default_client_info">Receive regular SMS within hike</string>
    <string name="use_hike_for_sms">Unified Inbox</string>
    <string name="use_hike_for_sms_info">To send a regular SMS, you need to make hike your primary SMS inbox</string>
    <string name="start_new_chat">Start a new chat</string>
    <string name="post_new_update">Post a new update</string>
    <string name="attach">Attach</string>
    <string name="games">Games</string>
    <string name="edit_group_name">Edit Group Name</string>
    <string name="feedback_hinttext">Give us feedback</string>
    <string name="faq_hinttext">Frequently Asked Questions</string>
    <string name="system_health_hinttext">See hike system status</string>
    <string name="not_show_call_alert_msg">Do not show again</string>
    <string name="unlink_hinttext">Clear your messages and profile from this device.</string>
    <string name="unlink_account">Reset Account</string>
    <string name="delete_account_msg">Delete your Hike account.</string>
</resources>