<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/sms" >

    <com.bsb.hike.view.IconCheckBoxPreference
        icon="@drawable/preference_free_sms"
        android:defaultValue="true"
        android:key="freeSmsPref"
        android:layout="@layout/icon_preference"
        android:summary="@string/free_sms_msg"
        android:title="@string/free_sms"
        android:widgetLayout="@layout/checkbox_widget" />
    <com.bsb.hike.view.IconCheckBoxPreference
        icon="@drawable/preference_default_client"
        android:key="receiveSmsPref"
        android:layout="@layout/icon_preference"
        android:summary="@string/default_client_info"
        android:title="@string/default_client_header"
        android:widgetLayout="@layout/checkbox_widget" />
    
</PreferenceScreen>