<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/share_msgs"
        android:icon="@drawable/share_icon"
        android:showAsAction="always"
        android:title="@string/share"/>
    <item
        android:id="@+id/forward_msgs"
        android:icon="@drawable/actionbar_ic_forward"
        android:showAsAction="always"
        android:title="@string/forward"/>
    <item
        android:id="@+id/overflow_menu"
        android:icon="@drawable/ic_overflow"
        android:showAsAction="always"
        android:title="@string/other">
        <menu>
            <item
                android:id="@+id/delete_msgs"
                android:showAsAction="never"
                android:title="@string/delete"/>
        </menu>
    </item>

</menu>