<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/attachment"
        android:icon="@drawable/ic_attachment"
        android:showAsAction="always"
        android:title="@string/attach"/>
    <item
        android:id="@+id/overflow_menu"
        android:icon="@drawable/ic_overflow"
        android:showAsAction="always"
        android:title="@string/other">
        <menu>
            <item
                android:id="@+id/profile"
                android:showAsAction="never"
                android:title="@string/profile_title"/>
            <item
                android:id="@+id/mute"
                android:showAsAction="never"
                android:title="@string/mute_group"
                android:visible="false"/>
        </menu>
    </item>

</menu>