<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/new_update"
        android:icon="@drawable/ic_new_status"
        android:showAsAction="always"
        android:title="@string/post_new_update"/>
    <item
        android:id="@+id/overflow_menu"
        android:icon="@drawable/ic_overflow"
        android:showAsAction="always"
        android:title="@string/other">
        <menu>
            <item
                android:id="@+id/edit"
                android:showAsAction="never"
                android:title="@string/edit_profile"/>
        </menu>
    </item>
    <item
        android:id="@+id/edit_dp"
        android:icon="@drawable/ic_edit_dp"
        android:showAsAction="always"
        android:title="@string/edit_photo"
        android:visible="false"/>
</menu>