<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/auto_download_media" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:text="@string/md_auto_download_media"
        android:textColor="@color/auto_download"/>
    
    <com.bsb.hike.view.IconCheckBoxPreference
        icon="ic_auto_download_image"
        android:defaultValue="true"
        android:key="mdAutoDownloadImagePref"
        android:layout="@layout/icon_preference"
        android:title="@string/auto_download_image_title"
        android:widgetLayout="@layout/checkbox_widget" />
    <com.bsb.hike.view.IconCheckBoxPreference
        icon="ic_auto_download_video"
        android:defaultValue="false"
        android:key="mdAutoDownloadVideoPref"
        android:layout="@layout/icon_preference"
        android:title="@string/auto_download_video_title"
        android:widgetLayout="@layout/checkbox_widget" />
    <com.bsb.hike.view.IconCheckBoxPreference
        icon="ic_auto_download_audio"
        android:defaultValue="false"
        android:key="mdAutoDownloadImagePref"
        android:layout="@layout/icon_preference"
        android:title="@string/auto_download_audio_title"
        android:widgetLayout="@layout/checkbox_widget" />
    
    <com.bsb.hike.view.IconCheckBoxPreference
        icon="ic_auto_download_image"
        android:defaultValue="true"
        android:key="wfAutoDownloadImagePref"
        android:layout="@layout/icon_preference"
        android:title="@string/auto_download_image_title"
        android:widgetLayout="@layout/checkbox_widget" />
    <com.bsb.hike.view.IconCheckBoxPreference
        icon="ic_auto_download_video"
        android:defaultValue="true"
        android:key="wfAutoDownloadVideoPref"
        android:layout="@layout/icon_preference"
        android:title="@string/auto_download_video_title"
        android:widgetLayout="@layout/checkbox_widget" />
    <com.bsb.hike.view.IconCheckBoxPreference
        icon="ic_auto_download_audio"
        android:defaultValue="true"
        android:key="wfAutoDownloadAudioPref"
        android:layout="@layout/icon_preference"
        android:title="@string/auto_download_audio_title"
        android:widgetLayout="@layout/checkbox_widget" />
    
</PreferenceScreen>
    