<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:hike="http://schemas.android.com/apk/res/com.bsb.hike"
    android:id="@+id/name_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <com.bsb.hike.view.CustomFontTextView
        android:id="@+id/txt_img1"
        style="@style/SignupButton.Text.Info"
        android:text="@string/all_set_signup"
        hike:font="omnes" />

    <com.bsb.hike.view.CustomFontTextView
        android:id="@+id/txt_img2"
        style="@style/SignupButton.Text.Info"
        android:text="@string/enter_name_signup"
        hike:font="omnes" />

    <com.bsb.hike.view.CustomFontEditText
        android:id="@+id/et_enter_name"
        style="@style/SignupButton"
        android:layout_marginTop="10dp"
        android:background="@drawable/tb_name"
        android:hint="@string/name"
        android:imeOptions="actionDone"
        android:inputType="textCapWords"
        android:maxLength="@integer/max_length_name"
        android:singleLine="true"
        android:textSize="15sp"
        android:visibility="visible" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.bsb.hike.view.CustomFontButton
            android:id="@+id/btn_continue"
            style="@style/SignupButton.Text.Bold.Button"
            android:layout_marginTop="10dp"
            android:background="@drawable/signup_button"
            android:onClick="onClick"
            android:text="@string/lets_hike_signup"
            hike:font="omnes" />

        <RelativeLayout
            android:id="@+id/loading_layout"
            style="@style/SignupButton"
            android:layout_marginTop="10dp"
            android:background="@drawable/signup_loading_bckg"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:visibility="invisible" >

            <ProgressBar
                android:id="@+id/loading_progress"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:indeterminateDrawable="@drawable/custom_progress_bar_drawable" />

            <com.bsb.hike.view.CustomFontTextView
                android:id="@+id/txt_loading"
                style="@style/SignupButton.Text.Bold.Loading"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/loading_progress"
                android:text="@string/scanning_contacts_signup"
                hike:font="omnes" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>