<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="288dp"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" >

    <com.bsb.hike.view.CustomFontTextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:text="@string/use_hike_for_sms"
        android:textColor="@color/sms_popup"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <View
        android:id="@+id/div1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/header"
        android:background="@color/sms_popup" />

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/div1"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <com.bsb.hike.view.CustomFontTextView
            android:id="@+id/body_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call_not_free_body"
            android:textColor="@color/list_item_header"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/body_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/hike_list_item_checkbox"
            android:layout_marginTop="15dp"
            android:text="@string/not_show_call_alert_msg" 
            android:textColor="@color/list_item_header"
            android:textSize="16sp" />
        
    </LinearLayout>

    <View
        android:id="@+id/sms_divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/body"
        android:background="#f5f5f5" />

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/sms_divider" >

        <com.bsb.hike.view.CustomFontButton
            android:id="@+id/btn_cancel"
            style="@style/SmsPopupButton"
            android:text="@string/cancel" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#f5f5f5" />

        <com.bsb.hike.view.CustomFontButton
            android:id="@+id/btn_ok"
            style="@style/SmsPopupButton"
            android:text="@string/continue_txt" />
    </LinearLayout>

</RelativeLayout>